# ohlcv-validator

./: .env.example  .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
docs/: runbook.md
ml/: README.md  autoencoder.py  baseline.py  detect.py  eval_ladder.py  evaluate.py  features.py  fetch_history.py  metrics.py  replay_reader.py  replay_writer.py  requirements.txt  rl_demo.py  rl_env.py  rl_policies.py  split.py  synth.py  synth_eval.py  test_autoencoder.py  test_evaluate.py  test_features.py  test_replay_reader.py  test_rl_env.py  test_split.py
scripts/: capture_session.sh
src/: main.cpp
src/book/: book_builder.h  book_messages.h  order_book.h
src/concurrent/: spsc_ring.h
src/feed/: arbitrator.h  feed_protocol.h  udp_multicast.h
src/ingest/: alpaca_client.cpp  alpaca_client.h  live_report.h  parser.cpp  parser.h  to_wire.h  violation_log.h
src/model/: bar.h  timestamp.h  wire.h
src/replay/: binary_format.h  capture_writer.h  mapped_file.h
src/util/: backoff.h  histogram.h  timing.h  tsc_timer.h
src/validate/: validator.cpp  validator.h
tests/: CMakeLists.txt  fuzz_parser.cpp  test_alloc_guard.cpp  test_arbitrator.cpp  test_backoff.cpp  test_book_builder.cpp  test_capture_writer.cpp  test_feed_multicast.cpp  test_histogram.cpp  test_live_validation.cpp  test_order_book.cpp  test_parser.cpp  test_reconnect.cpp  test_spsc_ring.cpp  test_timestamp.cpp  test_timing.cpp  test_validator.cpp  test_violation_log.cpp
